collapsed function with bug

--- a/src/scss/layout/_section-form.scss
+++ b/src/scss/layout/_section-form.scss
@@ -138,7 +138,7 @@
 
     }
 }
-.collapsed{
+.collapsed-form{
     display: none;
 }
 .arrow{
